CREATE TABLE doctrine_migration_versions (version VARCHAR(191) NOT NULL, executed_at DATETIME DEFAULT NULL, execution_time INTEGER DEFAULT NULL, PRIMARY KEY(version));
CREATE TABLE appointment (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, patient_id INTEGER NOT NULL, agenda VARCHAR(255) NOT NULL, specialty VARCHAR(255) NOT NULL, location VARCHAR(255) NOT NULL, date_at DATETIME NOT NULL --(DC2Type:datetime_immutable)
        , type VARCHAR(255) NOT NULL, status VARCHAR(255) NOT NULL, CONSTRAINT FK_FE38F8446B899279 FOREIGN KEY (patient_id) REFERENCES patient (id) NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE TABLE sqlite_sequence(name,seq);
CREATE INDEX IDX_FE38F8446B899279 ON appointment (patient_id);
CREATE TABLE attendance (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, patient_id INTEGER NOT NULL, check_in_user_id INTEGER NOT NULL, check_out_user_id INTEGER DEFAULT NULL, check_in_at DATETIME NOT NULL --(DC2Type:datetime_immutable)
        , check_out_at DATETIME DEFAULT NULL --(DC2Type:datetime_immutable)
        , tag INTEGER NOT NULL, evidence VARCHAR(255) DEFAULT NULL, CONSTRAINT FK_6DE30D916B899279 FOREIGN KEY (patient_id) REFERENCES patient (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_6DE30D917713D579 FOREIGN KEY (check_in_user_id) REFERENCES user (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_6DE30D914D154D9F FOREIGN KEY (check_out_user_id) REFERENCES user (id) NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE INDEX IDX_6DE30D916B899279 ON attendance (patient_id);
CREATE INDEX IDX_6DE30D917713D579 ON attendance (check_in_user_id);
CREATE INDEX IDX_6DE30D914D154D9F ON attendance (check_out_user_id);
CREATE TABLE hospitalized (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, patient_id INTEGER NOT NULL, service VARCHAR(255) NOT NULL, bed VARCHAR(255) NOT NULL, CONSTRAINT FK_7E8E259E6B899279 FOREIGN KEY (patient_id) REFERENCES patient (id) NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE UNIQUE INDEX UNIQ_7E8E259E6B899279 ON hospitalized (patient_id);
CREATE TABLE patient (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, file VARCHAR(12) NOT NULL, name VARCHAR(255) NOT NULL, disability BOOLEAN NOT NULL);
CREATE TABLE stakeholder (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, destination_id INTEGER NOT NULL, check_in_user_id INTEGER NOT NULL, check_out_user_id INTEGER DEFAULT NULL, host_id INTEGER DEFAULT NULL, name VARCHAR(255) NOT NULL, dni VARCHAR(255) NOT NULL, tag INTEGER NOT NULL, company VARCHAR(255) NOT NULL, subject VARCHAR(255) NOT NULL, check_in_at DATETIME NOT NULL --(DC2Type:datetime_immutable)
        , check_out_at DATETIME DEFAULT NULL --(DC2Type:datetime_immutable)
        , evidence VARCHAR(255) DEFAULT NULL, sign VARCHAR(255) DEFAULT NULL, comment CLOB DEFAULT NULL, CONSTRAINT FK_8B9823AA816C6140 FOREIGN KEY (destination_id) REFERENCES area (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_8B9823AA7713D579 FOREIGN KEY (check_in_user_id) REFERENCES user (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_8B9823AA4D154D9F FOREIGN KEY (check_out_user_id) REFERENCES user (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_8B9823AA1FB8D185 FOREIGN KEY (host_id) REFERENCES employee (id) NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE INDEX IDX_8B9823AA816C6140 ON stakeholder (destination_id);
CREATE INDEX IDX_8B9823AA7713D579 ON stakeholder (check_in_user_id);
CREATE INDEX IDX_8B9823AA4D154D9F ON stakeholder (check_out_user_id);
CREATE INDEX IDX_8B9823AA1FB8D185 ON stakeholder (host_id);
CREATE TABLE user (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, username VARCHAR(180) NOT NULL, roles CLOB NOT NULL --(DC2Type:json)
        , password VARCHAR(255) NOT NULL, name VARCHAR(255) NOT NULL, active BOOLEAN NOT NULL);
CREATE UNIQUE INDEX UNIQ_IDENTIFIER_USERNAME ON user (username);
CREATE TABLE visitor (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, destination_id INTEGER NOT NULL, check_in_user_id INTEGER NOT NULL, check_out_user_id INTEGER DEFAULT NULL, host_id INTEGER DEFAULT NULL, name VARCHAR(255) NOT NULL, phone VARCHAR(255) DEFAULT NULL, dni VARCHAR(255) NOT NULL, tag INTEGER NOT NULL, check_in_at DATETIME NOT NULL --(DC2Type:datetime_immutable)
        , check_out_at DATETIME DEFAULT NULL --(DC2Type:datetime_immutable)
        , relationship VARCHAR(255) DEFAULT NULL, evidence VARCHAR(255) DEFAULT NULL, comment CLOB DEFAULT NULL, CONSTRAINT FK_CAE5E19F816C6140 FOREIGN KEY (destination_id) REFERENCES area (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_CAE5E19F7713D579 FOREIGN KEY (check_in_user_id) REFERENCES user (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_CAE5E19F4D154D9F FOREIGN KEY (check_out_user_id) REFERENCES user (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_CAE5E19F1FB8D185 FOREIGN KEY (host_id) REFERENCES employee (id) NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE INDEX IDX_CAE5E19F816C6140 ON visitor (destination_id);
CREATE INDEX IDX_CAE5E19F7713D579 ON visitor (check_in_user_id);
CREATE INDEX IDX_CAE5E19F4D154D9F ON visitor (check_out_user_id);
CREATE INDEX IDX_CAE5E19F1FB8D185 ON visitor (host_id);
CREATE TABLE visitor_patient (visitor_id INTEGER NOT NULL, patient_id INTEGER NOT NULL, PRIMARY KEY(visitor_id, patient_id), CONSTRAINT FK_D8C9472370BEE6D FOREIGN KEY (visitor_id) REFERENCES visitor (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_D8C947236B899279 FOREIGN KEY (patient_id) REFERENCES patient (id) ON DELETE CASCADE NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE INDEX IDX_D8C9472370BEE6D ON visitor_patient (visitor_id);
CREATE INDEX IDX_D8C947236B899279 ON visitor_patient (patient_id);
CREATE TABLE messenger_messages (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, body CLOB NOT NULL, headers CLOB NOT NULL, queue_name VARCHAR(190) NOT NULL, created_at DATETIME NOT NULL --(DC2Type:datetime_immutable)
        , available_at DATETIME NOT NULL --(DC2Type:datetime_immutable)
        , delivered_at DATETIME DEFAULT NULL --(DC2Type:datetime_immutable)
        );
CREATE INDEX IDX_75EA56E0FB7336F0E3BD61CE16BA31DBBF396750 ON messenger_messages (queue_name, available_at, delivered_at, id);
CREATE TABLE area (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, unit VARCHAR(255) DEFAULT NULL, building VARCHAR(255) NOT NULL, extension INTEGER DEFAULT NULL);
CREATE TABLE employee (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, area_id INTEGER DEFAULT NULL, number INTEGER NOT NULL, name VARCHAR(255) NOT NULL, active BOOLEAN NOT NULL, CONSTRAINT FK_5D9F75A1BD0F409C FOREIGN KEY (area_id) REFERENCES area (id) ON UPDATE NO ACTION ON DELETE NO ACTION NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE INDEX IDX_5D9F75A1BD0F409C ON employee (area_id);
CREATE TABLE scheduled_attendance (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, scheduled_id INTEGER NOT NULL, check_in_user_id INTEGER NOT NULL, check_in_at DATETIME NOT NULL --(DC2Type:datetime_immutable)
        , CONSTRAINT FK_F3918528DCA2FF9A FOREIGN KEY (scheduled_id) REFERENCES scheduled (id) NOT DEFERRABLE INITIALLY IMMEDIATE, CONSTRAINT FK_F39185287713D579 FOREIGN KEY (check_in_user_id) REFERENCES user (id) NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE INDEX IDX_F3918528DCA2FF9A ON scheduled_attendance (scheduled_id);
CREATE INDEX IDX_F39185287713D579 ON scheduled_attendance (check_in_user_id);
CREATE TABLE scheduled (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, area_id INTEGER NOT NULL, label VARCHAR(255) NOT NULL, name VARCHAR(255) NOT NULL, institution VARCHAR(255) NOT NULL, subject VARCHAR(255) NOT NULL, begin_at DATE NOT NULL --(DC2Type:date_immutable)
        , end_at DATE NOT NULL --(DC2Type:date_immutable)
        , CONSTRAINT FK_B2E85949BD0F409C FOREIGN KEY (area_id) REFERENCES area (id) ON UPDATE NO ACTION ON DELETE NO ACTION NOT DEFERRABLE INITIALLY IMMEDIATE);
CREATE INDEX IDX_B2E85949BD0F409C ON scheduled (area_id);
CREATE UNIQUE INDEX UNIQ_IDENTIFIER_LABEL ON scheduled (label);
