@startuml DER
!theme reddress-darkblue

' Title
title Entity-Relationship Diagram for Patient/Visitor System

entity "area" as area {
  * id : INTEGER <<PK>>
  --
  * building : VARCHAR(255)
    unit : VARCHAR(255)
    extension : INTEGER
}

entity "employee" as employee {
  * id : INTEGER <<PK>>
  --
  * area_id : INTEGER <<FK>>
  * number : INTEGER
  * name : VARCHAR(255)
  * active : BOOLEAN
}

entity "user" as user {
  * id : INTEGER <<PK>>
  --
  * username : VARCHAR(180) <<UNIQUE>>
  * roles : CLOB (JSON)
  * password : VARCHAR(255)
  * name : VARCHAR(255)
  * active : BOOLEAN
}

entity "patient" as patient {
  * id : INTEGER <<PK>>
  --
  * file : VARCHAR(12) <<UNIQUE>>
  * name : VARCHAR(255)
  * disability : BOOLEAN
}

entity "hospitalized" as hospitalized {
  * id : INTEGER <<PK>>
  --
  * patient_id : INTEGER <<FK, UNIQUE>>
  * service : VARCHAR(255)
  * bed : VARCHAR(255)
}

entity "appointment" as appointment {
  * id : INTEGER <<PK>>
  --
  * patient_id : INTEGER <<FK>>
  * agenda : VARCHAR(255)
  * specialty : VARCHAR(255)
  * location : VARCHAR(255)
  * date_at : DATETIME
  * type : VARCHAR(255)
  * status : VARCHAR(255)
}

entity "attendance" as attendance {
  * id : INTEGER <<PK>>
  --
  * patient_id : INTEGER <<FK>>
  * check_in_user_id : INTEGER <<FK>>
    check_out_user_id : INTEGER <<FK>>
  * check_in_at : DATETIME
    check_out_at : DATETIME
  * tag : INTEGER
    evidence : VARCHAR(255)
}

entity "visitor" as visitor {
  * id : INTEGER <<PK>>
  --
  * destination_id : INTEGER <<FK>>
  * check_in_user_id : INTEGER <<FK>>
    check_out_user_id : INTEGER <<FK>>
    host_id : INTEGER <<FK>>
  * name : VARCHAR(255)
    phone : VARCHAR(255)
  * dni : VARCHAR(255)
  * tag : INTEGER
  * check_in_at : DATETIME
    check_out_at : DATETIME
    relationship : VARCHAR(255)
    evidence : VARCHAR(255)
    comment : CLOB
}

entity "stakeholder" as stakeholder {
  * id : INTEGER <<PK>>
  --
  * destination_id : INTEGER <<FK>>
  * check_in_user_id : INTEGER <<FK>>
    check_out_user_id : INTEGER <<FK>>
    host_id : INTEGER <<FK>>
  * name : VARCHAR(255)
  * dni : VARCHAR(255)
  * tag : INTEGER
  * company : VARCHAR(255)
  * subject : VARCHAR(255)
  * check_in_at : DATETIME
    check_out_at : DATETIME
    evidence : VARCHAR(255)
    sign : VARCHAR(255)
    comment : CLOB
}

entity "visitor_patient" as visitor_patient {
  * visitor_id : INTEGER <<PK, FK>>
  * patient_id : INTEGER <<PK, FK>>
}

' Relationships

area ||--o{ employee : "has"
area ||--o{ visitor : "destination for"
area ||--o{ stakeholder : "destination for"

employee ||--o{ visitor : "hosts"
employee ||--o{ stakeholder : "hosts"

patient ||--o| hospitalized : "hospitalized as"
patient ||--o{ appointment : "has"
patient ||--o{ attendance : "records"
patient ||--o{ visitor_patient : "visited in"
visitor ||--o{ visitor_patient : "visits"

user ||--o{ attendance : "check-in user"
user ||--o{ attendance : "check-out user"
user ||--o{ visitor : "check-in user"
user ||--o{ visitor : "check-out user"
user ||--o{ stakeholder : "check-in user"
user ||--o{ stakeholder : "check-out user"

@enduml
